# agenter

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
agenter/: __init__.py  __main__.py  coding_agent.py  config.py  file_system.py  logging.py  pricing.py  tools.py
agenter/adapters/: __init__.py  langgraph.py  pydantic_ai.py
agenter/coding_backends/: __init__.py  base.py  output_parser.py  prompts.py  protocol.py  refusal.py  retry.py
agenter/coding_backends/anthropic_sdk/: __init__.py  anthropic_tools.py  backend.py  client.py  constants.py  file_tools.py
agenter/coding_backends/claude_code/: __init__.py  backend.py  constants.py  refusal_mcp_server.py
agenter/coding_backends/codex/: __init__.py  backend.py  constants.py  mcp_tool_server.py
agenter/coding_backends/openhands/: __init__.py  backend.py  constants.py
agenter/data_models/: __init__.py  budget.py  events.py  exceptions.py  messages.py  tools.py  types.py  usage.py
agenter/post_validators/: __init__.py  chain.py  protocol.py  security.py  syntax.py
agenter/runtime/: __init__.py  budget.py  display.py  session.py  tracer.py
docs/: ARCHITECTURE.md  NAMING_CONVENTIONS.md  OVERVIEW.md  api.rst  conf.py  index.md
examples/: fix_github_pages.ipynb  quickstart.ipynb
integrations/openclaw/: README.md  SKILL.md
integrations/openclaw/references/: backends.md
integrations/openclaw/scripts/: requirements.txt
tests/: conftest.py  test_adapters.py  test_anthropic_tools.py  test_client.py  test_codex_backend.py  test_config.py  test_display.py  test_exceptions.py  test_file_ops.py  test_file_tools.py  test_integration.py  test_openhands_backend.py  test_paths.py  test_sdk.py  test_security_validator.py  test_session.py  test_tools.py  test_utils.py
tests/manual/: conftest.py  test_claude_agent.py
